# djview

./: .pre-commit-config.yaml  MANIFEST.in  README  pytest.ini  requirements.txt  setup.cfg
djview/: apps.py  auth.py  context.py  crud.py  views.py
djview/tests/: settings.py  tests.py  urls.py
djview/tests/test_app/: apps.py  auth_backends.py  forms.py  models.py
djview/tests/test_app/migrations/: 0001_initial.py
